@@ -1,4 +1,5 @@
 #
+# $OpenBSD: inetbsd.S,v 1.2 1996/05/30 22:14:42 niklas Exp $
 # $NetBSD: inetbsd.S,v 1.2 1996/05/15 21:16:44 is Exp $
 #
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
